@@ -199,7 +199,10 @@ class WFCheckbox extends WFWidget
     {
         $myBindings = parent::setupExposedBindings();
         $myBindings[] = new WFBindingSetup('value', 'The value of the checkbox -- this will be either checkedValue or uncheckedValue depending on the checked status.');
-        $myBindings[] = new WFBindingSetup('label', 'The label for the checkbox -- Text to label the checkbox with, or empty.');
+        $label = new WFBindingSetup('label', 'The label for the checkbox -- Text to label the checkbox with, or empty.');
+        $label->setBindingType(WFBindingSetup::WFBINDINGTYPE_MULTIPLE_PATTERN);
+        $label->setReadOnly(true);
+        $myBindings[] = $label;
         $myBindings[] = new WFBindingSetup('checkedValue', 'The value of the checkbox to use if it is checked.');
         $myBindings[] = new WFBindingSetup('uncheckedValue', 'The value of the checkbox to use if it is not checked.');
         return $myBindings;
