@@ -37,6 +37,7 @@ Version 0.4.0 - ??
 - [new] Add WFDictionary object, a KVC-compliant hash object -- great for using widgets with transient data structures.
 - [improved] WFViewHiddenHelper and WFShowErrors have been updated to automagically work for WFDynamic's with oneShotMode enabled.
 - [bugfix] Fix nullPlaceholders in WFTextField and WFTextArea. They weren't italicizing on initial load or if the value was the same as the nullPlaceholder.
+- [improved] Make WFCheckbox.label support multi-value pattern bindings.
 
 Version 0.3.9 - 10/21/2010
 - [new] Add WFRequestController->isMobileBrowser()
